# Estrutura-dados

./: Estrutura de dados Lista -JONASCORREA -A2310597.rar  Lista 05 - Jonas Corriea - a2310597.rar  Lista04 -JONASCORREA -A2310597.rar  Lista06-Jonas Correia- 2310597.rar  Lista07-Jonas Correia - a2310597.rar
Arvorebin/: CMakeLists.txt  main.c
Lista03/: 4 - Pilha Dinâmica - Link Vídeo Aula.txt  CMakeLists.txt  PilhaDin.c  PilhaDin.h  exe06.c  main.c
Lista04/ProjFilaDin/: CMakeLists.txt  Fila de pilhas.c  FilaDin.c  FilaDin.h  PilhaDin.c  PilhaDin.h  _Pilha de filas.c  aviao.c  fila de filas.c  main.c
Lista05/: CMakeLists.txt
Lista05/ProjListaDinEncad/: ListaDinEncad.c  ListaDinEncad.h  main.c
Lista06/: CMakeLists.txt
Lista06/ProjListaDinEncad/: ListaDinEncad.c  ListaDinEncad.h
Lista06exe04/: CMakeLists.txt  main.c
Lista06exe05/: main.c
Lista07/: CMakeLists.txt
Lista07/ProjArvoreBinaria/ProjArvoreBinaria/: ArvoreBinaria.c  ArvoreBinaria.h  main.c
Trabalho01/: CMakeLists.txt  main.c  matriz.c  matriz.h
lista03exe06/: CMakeLists.txt  main.c
lista03exe07/: CMakeLists.txt  main.c
lista05exe04/: CMakeLists.txt  main.c
lista05exe05/: CMakeLists.txt  main.c
